--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,12 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
-	loader_version=0.13.3
-
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.2
+loader_version=0.13.3
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
-
+mod_version = 1.18.2-1
+maven_group = com.daniking.throwabletorch
+archives_base_name = throwabletorch
 # Dependencies
-	fabric_version=0.47.8+1.18.2
+fabric_version=0.47.8+1.18.2
