--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.2
-loader_version=0.13.3
+minecraft_version=1.19-pre5
+
+yarn_mappings=1.19-pre5+build.4
+loader_version=0.14.6
 # Mod Properties
-mod_version = 1.18.2-1
+mod_version = 1.19.0-1
 maven_group = com.daniking.throwabletorch
 archives_base_name = throwabletorch
 # Dependencies
-fabric_version=0.47.8+1.18.2
+fabric_version=0.54.0+1.19
