--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19-pre5
-
-yarn_mappings=1.19-pre5+build.4
-loader_version=0.14.6
+minecraft_version=1.19
+yarn_mappings=1.19+build.1
+loader_version=0.14.7
 # Mod Properties
 mod_version = 1.19.0-1
 maven_group = com.daniking.throwabletorch
 archives_base_name = throwabletorch
 # Dependencies
-fabric_version=0.54.0+1.19
+fabric_version=0.55.3+1.19
+
