Add LambDynamicLights integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 minecraft_version=1.19
-yarn_mappings=1.19+build.1
+yarn_mappings=1.19+build.2
 loader_version=0.14.7
 # Mod Properties
-mod_version = 1.19.0-1
+mod_version = 1.19.0-2
 maven_group = com.daniking.throwabletorch
 archives_base_name = throwabletorch
 # Dependencies
 fabric_version=0.55.3+1.19
+lambdynamiclights=2.1.2+1.19
+mod_menu_version=4.0.0
 
