--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,15 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	maven {
+		name 'Gegy'
+		url 'https://maven.gegy.dev'
+	}
+	maven {
+		name 'Terraformers'
+		url 'https://maven.terraformersmc.com/releases/'
+	}
 }
 
 dependencies {
@@ -25,6 +34,11 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	// Compat
+	modImplementation("com.terraformersmc:modmenu:${project.mod_menu_version}") {
+		transitive = false
+	}
+	modImplementation("dev.lambdaurora:lambdynamiclights:${project.lambdynamiclights}")
 }
 
 processResources {
