--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.1
-loader_version=0.14.11
+minecraft_version=1.19.4
+yarn_mappings=1.19.4+build.1
+loader_version=0.14.17
 # Mod Properties
-mod_version = 1.19.3-1
+mod_version = 1.19.4-1
 maven_group = com.daniking.throwabletorch
 archives_base_name = throwabletorch
 # Dependencies
-fabric_version=0.68.1+1.19.3
+fabric_version=0.76.0+1.19.4
 lambdynamiclights=2.2.0+1.19.3
-mod_menu_version=5.0.2
+mod_menu_version=6.1.0-rc.4
 
