--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 # Fabric Properties
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.14.21
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.9
 # Mod Properties
-mod_version = 1.20.1-1
+mod_version = 1.21.3-1
 maven_group = com.daniking.throwabletorch
 archives_base_name = throwabletorch
 # Dependencies
-fabric_version=0.86.0+1.20.1
-lambdynamiclights=2.3.1+1.20.1
+fabric_version=0.107.0+1.21.3
+lambdynamiclights=3.2.2+1.21.3
 mod_menu_version=6.1.0-rc.4
 
