--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ archives_base_name = throwabletorch
 # Dependencies
 fabric_version=0.107.0+1.21.3
 lambdynamiclights=3.2.2+1.21.3
-mod_menu_version=6.1.0-rc.4
+mod_menu_version=11.0.3
 
